Add comment in HTML code

--- a/index.html
+++ b/index.html
@@ -11,38 +11,75 @@
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
+    <!-- Start of header -->
     <header>
+      <!-- Start of navigation -->
       <nav>
+        <!-- Netflix logo -->
         <a href="#"><img src="Images/logo.svg" alt="" /></a>
       </nav>
+      <!-- End of navigation -->
     </header>
+    <!-- End of header -->
+
+    <!-- Start of main -->
     <main>
+      <!-- Start of form wrapper -->
       <div class="form-wrapper">
+        <!-- Form title -->
         <h2>Sign In</h2>
+        <!-- Start of form -->
         <form action="#">
+          <!-- Start of form content -->
           <div class="form-content">
+            <!-- Email input -->
             <input type="text" />
+            <!-- Email label -->
             <label>Email or phone number</label>
           </div>
+          <!-- End of form content -->
+
+          <!-- Start of form content -->
           <div class="form-content">
+            <!-- Password input -->
             <input type="password" />
+            <!-- Password label -->
             <label>Password</label>
           </div>
+          <!-- End of form content -->
+
+          <!-- Sign in button -->
           <button>Sign In</button>
+
+          <!-- Start of form guide -->
           <div class="form-guide">
+            <!-- Start of remember -->
             <div class="remember">
+              <!-- Check box input -->
               <input type="checkbox" id="remember" />
+              <!-- Check box label -->
               <label for="remember">Remember me</label>
             </div>
+            <!-- End of remember -->
+
+            <!-- Help information -->
             <a href="#">Need help?</a>
           </div>
+          <!-- End of form guide -->
         </form>
+        <!-- End of form -->
+
+        <!-- Sign up paragraph -->
         <p>New to Netflix? <a href="#">Sign up now</a></p>
+        <!-- Start of small text -->
         <small>
           This page is protected by Google reCAPTCHA to ensure you're not a bot.
           <a href="#">Learn more.</a>
         </small>
+        <!-- End of small text -->
       </div>
+      <!-- Start of form wrapper -->
     </main>
+    <!-- End of main -->
   </body>
 </html>
