set style for input

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <!-- Start of form content -->
           <div class="form-content">
             <!-- Email input -->
-            <input type="text" />
+            <input type="text" required/>
             <!-- Email label -->
             <label>Email or phone number</label>
           </div>
@@ -42,14 +42,14 @@
           <!-- Start of form content -->
           <div class="form-content">
             <!-- Password input -->
-            <input type="password" />
+            <input type="password" required/>
             <!-- Password label -->
             <label>Password</label>
           </div>
           <!-- End of form content -->
 
           <!-- Sign in button -->
-          <button>Sign In</button>
+          <button type="submit">Sign In</button>
 
           <!-- Start of form guide -->
           <div class="form-guide">
